# Clypra

./: .gitignore  AI_CAPTIONING_FIX.md  ASPECT_RATIO_FIX.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CONTRIBUTORS.md  DRAG_DROP_COMPLETE.md  DRAG_DROP_FIX_COMPLETE.md  DRAG_DROP_STATUS.md  EXPORT_PERFORMANCE_ANALYSIS.md  FAQ.md  GAP_UI_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  MANUAL_TESTING_GUIDE.md  MEDIUM_PRIORITY_FIXES_SUMMARY.md  NETWORK_ERROR_HANDLING.md  PREVIEW_BEHAVIOR_CHANGES.md  PREVIEW_MEDIA_POOL_AUDIT_REPORT.md  QUICK_WINS_IMPLEMENTED.md  README.md  RESIZE_DEBUG_LOG_GUIDE.md  SPONSORS.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml  RELEASE_NOTES_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.kiro/: ERA2_BACKLOG.md
android/app/: build.gradle
docs/: MANUAL_TESTING_GUIDE.md
scripts/: tauri-dev.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: decoder_pool_stress_test.rs  lib.rs  thumbnail_engine.rs  thumbnail_engine_proptest.rs
src-tauri/src/commands/: export.rs  media.rs  mod.rs  native_export.rs  project.rs  recording.rs  thumbnail.rs  whisper.rs
src-tauri/src/thumbnail_engine/: cache.rs  decoder.rs  geometry.rs  pyramid.rs  queue.rs  retry.rs  types.rs
src/constants/: config.ts  textEffects.ts  textTemplates.ts
src/hooks/: useAnchoredTimelineZoom.ts  useAutoUpdater.ts  useCacheManager.ts  useFileDrop.ts  useKeyboardShortcuts.ts  useMediaImport.ts  (+11 more)
(+448 files in other folders)
