[package]
name = "clypra"
version = "0.1.0-alpha.1"
description = "A modern, open-source video editor with native performance and GPU-accelerated preview"
authors = ["Clypra Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time", "sync"] }
rayon = "1.10"
base64 = "0.22"
md5 = "0.7"
walkdir = "2"
dashmap = "6"
crossbeam = "0.8"
web-time = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

# Native FFmpeg bindings for fast thumbnail extraction
ffmpeg-next = "8"
ffmpeg-sys-next = "8"

# Image encoding for native decoder frame output
image = { version = "0.25", default-features = false, features = ["webp", "png"] }

[dev-dependencies]
proptest = "1"

